Create Main and About components. Fix Header

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,20 +1,3 @@
 .main {
-}
-
-.search {
-}
-
-.search__title {
-}
-
-.search__subtitle {
-}
-
-.search__form {
-}
-
-.search__input {
-}
-
-.search__button {
+  font-family: "Roboto Medium";
 }
