--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,12 +5,25 @@
   border-bottom: 1px solid #545454;
 }
 
+.header__background {
+  background: url(../../images/header_background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 576px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .header__logo {
   font-family: "Robotoslab";
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   margin: 30px 0 25px 0;
+  color: white;
 }
 
 .header__container {
@@ -21,10 +34,12 @@
   align-items: center;
   margin-left: 104px;
   margin-right: 104px;
+  z-index: 1;
 }
 
 .header__button {
-  border: 1px solid black;
+  border: 1px solid white;
+  color: white;
   box-sizing: border-box;
   border-radius: 100px;
   cursor: pointer;
@@ -35,16 +50,29 @@
   font-size: 18px;
   line-height: 24px;
   margin-left: 32px;
+  transition: ease-in 0.3s all;
+}
+
+.header__button:hover {
+  transition: ease-in 0.3s all;
+  border: 1px solid #2f71e5;
+  background-color: #2f71e5;
 }
 
 .header__link {
   text-decoration: none;
   cursor: pointer;
   border: none;
-  color: black;
+  color: white;
   font-size: 18px;
   line-height: 24px;
   margin-left: 32px;
+  transition: ease-in 0.3s all;
+}
+
+.header__link:hover {
+  transition: ease-in 0.3s all;
+  opacity: 0.5;
 }
 
 .header__menu {
