--- a/src/components/NewsCard/NewCard.css
+++ b/src/components/NewsCard/NewCard.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: "Roboto Medium";
   transition: ease-in 0.3s all;
+  text-align: left;
+  overflow: hidden;
+  max-width: 400px;
 }
 
 .new-card:hover {
@@ -13,11 +16,10 @@
 }
 
 .new-card__image {
-  width: 400px;
+  width: 100%;
   height: 272px;
   object-fit: cover;
   box-sizing: border-box;
-  border-radius: 10px;
 }
 
 .new-card__keyword {
@@ -87,13 +89,13 @@
 .new-card__remind-window {
   position: absolute;
   height: 40px;
-  top: 16px;
+  top: 18px;
   right: 60px;
   border-radius: 8px;
   border: none;
   font-family: "Roboto";
   font-weight: 500;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 12px;
   background-color: white;
   transition: ease-in 0.3s all;
@@ -146,11 +148,13 @@
   justify-content: space-between;
   height: 260px;
   margin: 20px 24px 24px;
+  overflow: hidden;
 }
 
 .new-card__date {
   font-size: 18px;
   line-height: 24px;
+  font-weight: 400;
   color: rgba(182, 188, 191, 1);
   font-family: Sourcesanspro;
   margin: 0;
@@ -165,12 +169,17 @@
   font-family: Robotoslab;
   margin: 0;
   font-size: 26px;
+  font-weight: 400;
   line-height: 30px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-height: 90px;
 }
 
 .new-card__information {
   font-size: 16px;
   line-height: 22px;
+  font-weight: 400;
   margin: 0;
   height: 110px;
   overflow: hidden;
