--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -8,15 +8,14 @@
 
 .new-cardlist__results-title {
   font-family: Robotoslab;
-  width: 1233px;
-  margin: 0 auto 64px;
+  width: 400px;
   font-weight: 400;
   font-size: 40px;
   line-height: 46px;
-  text-align: left;
+  margin: 0 auto 64px 120px;
 }
 
-.new-cardlist__container {
+.new-cardlist__grid-container {
   display: grid;
   grid-template-rows: repeat(1, 1fr);
   grid-template-columns: repeat(3, 1fr);
