--- a/src/components/NewsCard/NewCard.css
+++ b/src/components/NewsCard/NewCard.css
@@ -78,9 +78,11 @@
   right: 60px;
   border-radius: 8px;
   border: none;
+  outline: none;
   font-weight: 500;
   font-size: 12px;
   line-height: 14px;
+  background-color: white;
   transition: ease-in 0.3s all;
 }
 
@@ -95,7 +97,8 @@
   right: 60px;
   border-radius: 8px;
   border: none;
-  font-family: "Roboto";
+  outline: none;
+  font-family: "Roboto Regular";
   font-weight: 500;
   font-size: 12px;
   line-height: 12px;
