--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -4,15 +4,20 @@
   padding: 80px 0;
   background-color: rgba(245, 246, 247, 1);
   font-family: "Roboto Medium";
+  align-items: center;
 }
+
+/* чет я совсем запарился тут */
 
 .new-cardlist__results-title {
   font-family: Robotoslab;
-  width: 400px;
+  /* width: 90%; */
   font-weight: 400;
   font-size: 40px;
   line-height: 46px;
-  margin: 0 auto 64px 120px;
+  /* text-align: left; */
+  padding-right: 800px;
+  margin-bottom: 64px;
 }
 
 .new-cardlist__grid-container {
@@ -42,4 +47,76 @@
   background: rgb(255, 255, 255, 0.9);
   cursor: pointer;
   transition: ease-in 0.3s all;
+}
+
+@media screen and (max-width: 1280px) {
+  .new-cardlist__results-title {
+    padding-right: 0;
+    text-align: left;
+    width: 90%;
+  }
+  .new-cardlist__grid-container {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .new-cardlist {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .new-cardlist__button {
+    margin: 22px auto 0;
+    width: 240px;
+    height: 56px;
+  }
+  .new-cardlist__results-title {
+    margin-top: 0;
+    margin-bottom: 32px;
+  }
+  .new-cardlist__grid-container {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .new-cardlist__grid-container {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .new-cardlist {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .new-cardlist__results-title {
+    margin-top: 0;
+    margin-bottom: 32px;
+  }
+  .new-cardlist__grid-container {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .new-cardlist__grid-container {
+    row-gap: 9px;
+    column-gap: 9px;
+    margin: auto;
+  }
+  .new-cardlist {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .new-cardlist__results-title {
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+  .new-cardlist__grid-container {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
