--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -3,12 +3,12 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+  align-items: center;
 }
 
 .saved-news__container {
+  padding-right: 800px;
   text-align: left;
-  width: 1235px;
-  margin: auto;
 }
 
 .saved-news__title {
@@ -44,4 +44,33 @@
   line-height: 24px;
   color: rgba(26, 27, 34, 1);
   margin: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .saved-news__container {
+    padding-right: 0;
+    text-align: left;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .saved-news__info {
+    font-size: 30px;
+    line-height: 34px;
+  }
+  .saved-news__title {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .saved-news__subtitle {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 32px;
+  }
+
+  .saved-news__keyword {
+    font-size: 14px;
+    line-height: 24px;
+  }
 }
