--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -86,3 +86,9 @@
     margin: 0 auto 65px;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .about__container {
+    margin: 0 16px 65px;
+  }
+}
