--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -152,3 +152,16 @@
   opacity: 0.5;
   transition: ease 0.5s all;
 }
+
+@media screen and (max-width: 650px) {
+  .popup__container {
+    height: 90%;
+    width: 100%;
+    bottom: -20px;
+  }
+  .popup__close-button {
+    top: -60px;
+    right: 15px;
+    padding: 0;
+  }
+}
