--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -95,3 +95,46 @@
     height: 59px;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .search__form {
+    margin-top: 122px;
+  }
+
+  .search__title {
+    font-size: 36px;
+    line-height: 40px;
+    width: 285px;
+    text-align: left;
+    padding-right: 0;
+    margin-top: 30px;
+  }
+
+  .search__subtitle {
+    max-width: 288px;
+    padding-right: 0;
+  }
+
+  .search__input {
+    width: 288px;
+    height: 56px;
+    padding-left: 15px;
+  }
+
+  .search__button {
+    width: 303px;
+    height: 56px;
+    top: 70px;
+  }
+}
+
+@media screen and (max-width: 325px) {
+  .search__input {
+    width: 273px;
+  }
+
+  .search__button {
+    width: 288px;
+    top: 70px;
+  }
+}
